<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/simpliremind"
        android:layout_marginBottom="15dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_make_ur_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_reminder"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="36dp" />

            <TextView
                android:id="@+id/label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/insert_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/label_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_repeat"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerRepeat"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_date"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/txt_select_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_date"
                    android:focusable="false"
                    android:textColor="@android:color/darker_gray"
                    android:onClick="showCalendar" />

            </LinearLayout>

            <!-- Time Picker -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_time"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold" />

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_gravity="center_horizontal"/>

            <!-- Add Task Button -->
            <Button
                android:id="@+id/btn_add_task_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_task"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="24dp"
                android:onClick="showAlert"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>